--- a/index.html
+++ b/index.html
@@ -354,7 +354,18 @@
                         </div>
                     </div>
                     <div class="row">
-		<div class="col-lg-4 col-md-6">
+			<div class="col-lg-4 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2020-11</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>MYSC 엠와이소셜컴퍼니 임팩트 투자 유치<p>
+                                </div>
+                            </div>
+                        </div>
+			<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
@@ -365,7 +376,7 @@
                                 </div>
                             </div>
                         </div>
-		<div class="col-lg-4 col-md-6">
+			<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
