--- a/index.html
+++ b/index.html
@@ -1012,11 +1012,11 @@
                                     </ul>
                                     <ul>
                                         <li><a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign" target=_new><img src="assets/images/widgets/1.png" alt="두근두근" style="height:25px;width:70px"></a></li>
-                                        <li><a href="https://duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:20px;width:70px"></a></li>
+                                        <li><a href="https://duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign" target=_new><img src="assets/images/widgets/4.png" alt="DUNI" style="height:20px;width:70px"></a></li>
                                     </ul>
                                     <ul>
-                                        <li><a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:15px;width:60px"><br><b>PILOT Center</b></a></li>
-                                        <li><a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign" target=_new><img src="assets/images/widgets/4.png" alt="두니" style="height:15px;width:60px"><br><b>Developer</b></a></li>
+                                        <li><a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign" target=_new><img src="assets/images/widgets/4.png" alt="DUNI" style="height:15px;width:60px"><br><b>파일럿 센터</b></a></li>
+                                        <li><a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign" target=_new><img src="assets/images/widgets/4.png" alt="DUNI" style="height:15px;width:60px"><br><b>개발자</b></a></li>
                                     </ul>
                                 </aside>
                             </div>
