--- a/index.html
+++ b/index.html
@@ -652,6 +652,13 @@
 				<div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
 		                                <div class="icon-box-title">
+		                                    <p><a href="https://www.kidp.or.kr" target=new>한국디자인진흥원</a></p>
+		                                </div>
+		                            </div>
+		                </div>
+				<div class="col-lg-4 col-md-6">
+		                            <div class="icon-box icon-box-left">
+		                                <div class="icon-box-title">
 		                                    <p><a href="https://blog.naver.com/habarose" target=new>AIR ON</a></p>
 		                                </div>
 		                            </div>
