kidp 데모데이 기록 추가

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -296,6 +296,14 @@
                         <div class="col-lg-4">
                             <p class="m-b-30"><img src="../assets/images/recruit/a_26.jpg" alt=""></p>
                         </div>
+                        
+                        <div class="col-lg-4">
+                            <p class="m-b-30"><img src="../assets/images/recruit/a_27.jpg" alt=""></p>
+                        </div>
+                        
+                        <div class="col-lg-4">
+                            <p class="m-b-30"><img src="../assets/images/recruit/a_28.jpg" alt=""></p>
+                        </div>
 										</div>
 								</div>
 						</section>
