--- a/index.html
+++ b/index.html
@@ -354,7 +354,19 @@
                         </div>
                     </div>
                     <div class="row">
-			<div class="col-lg-4 col-md-6">
+		<div class="col-lg-4 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2020-12</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>산업통상자원부 주최 / 한국디자인진흥원(KIDP) 주관 SOCIAL DESIGN DEMODAY - 혁신우수기업 수상<p>
+                                </div>
+                            </div>
+                        </div>
+
+		<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
@@ -365,7 +377,8 @@
                                 </div>
                             </div>
                         </div>
-			<div class="col-lg-4 col-md-6">
+
+		<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
@@ -376,7 +389,8 @@
                                 </div>
                             </div>
                         </div>
-			<div class="col-lg-4 col-md-6">
+
+		<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
@@ -389,6 +403,7 @@
                                 </div>
                             </div>
                         </div>
+
                     	<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
@@ -401,6 +416,7 @@
                                 </div>
                             </div>
                         </div>
+
                     	<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
@@ -415,6 +431,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
@@ -430,6 +447,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
