IE에서 영상 플래이 제대로 안되는 오류 수정중

--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
 				    opacity: [0,1],
 				    easing: "easeOutCirc",
 				    duration: 800,
-				    delay: (el, i) => 1500 * i
+				    delay: function(el, i) { 1500 * i }
 				  });
 				  
 				  
