채용기간 아님 표시

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -132,8 +132,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h4 class="ml15">
-															  <span class="word">보다 진보된 플랫폼 APLY가 함께 일할</span> 
-															  <span class="word">개발자를 채용합니다</span>
+															  <span class="word">APLY RECRUIT PAGE</span>															  
 														</h1>
                         </div>
                     </div>
@@ -149,19 +148,19 @@
             </div>
 
             <section class="module bg-white">
-                <div class="container">
-									<div class="col-md-12 text-center">            	            
-            	            <a href="../assets/images/recruit/recruit.jpg" data-lightbox="APLY"><img src="../assets/images/recruit/recruit.jpg" alt="" border=0 style="width:70%;"></a>  
-	            		</div>
-
+                <div class="container">									
 									<div class="col-md-12 text-center">
 										<h4 class="ml15">
 											<br>
-										  <span class="word">홈페이지, ppt 등 본인을 가장 잘 나타낼 수 있는 자료를 아래 주소로 보내주세요.</span><br>
-										  <span class="word"><a href=mailto:recruit@aply.biz>recruit@aply.biz</a></span>
+										  <span class="word">지금은 채용기간이 아닙니다.</span><br>
+										  <!-- <span class="word"><a href=mailto:recruit@aply.biz>recruit@aply.biz</a></span> -->
 										</h4>
 									</div>
                 </div>
+                
+                <div class="col-md-12 text-center">            	            
+            	  	<a href="../assets/images/recruit/recruit.jpg" data-lightbox="APLY"><img src="../assets/images/recruit/recruit.jpg" alt="" border=0 style="width:70%;"></a>  
+	            	</div>
             </section>
            
 
