리크루트 페이지에 이미지 추가

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -292,6 +292,10 @@
                         <div class="col-lg-4">
                             <p class="m-b-30"><a href="../assets/images/recruit/a_29.jpg" data-lightbox="APLY"><img src="../assets/images/recruit/a_29.jpg" alt=""></a></p>
                         </div>                        
+                        
+                        <div class="col-lg-4">
+                            <p class="m-b-30"><a href="../assets/images/recruit/a_30.jpg" data-lightbox="APLY"><img src="../assets/images/recruit/a_30.jpg" alt=""></a></p>
+                        </div>                
 										</div>
 								</div>
 						</section>
