--- a/recruit/index.html
+++ b/recruit/index.html
@@ -424,7 +424,7 @@
         <script src="../assets/js/custom/popper.min.js"></script>
         <script src="../assets/js/bootstrap/bootstrap.min.js"></script>
         <script src="../assets/js/custom/plugins.min.js"></script>
-        <script src="../assets/js/custom/custom.min.js"></script>
+        <script src="../assets/js/custom/custom.js"></script>
         <script src="../assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js"></script>        
