symbol 페이지의 회사 주소 수정

--- a/symbol/index.html
+++ b/symbol/index.html
@@ -237,8 +237,8 @@
 													       </div>
 													       <div class="collapse show" id="collapse-2" data-parent="#accordion2">
 													          <div class="accordion-item-body">
-													              <p>- 본사 한글: 06241 / 서울특별시 강남구 테헤란로 2길 27, 패스트파이브 빌딩, 11층  1118호 주식회사 어플라이</p>
-													              <p>- 본사 영문: 06241 / APLY Inc. FastFive Bldg 11F, 27 Teheran-ro 2-gil, Gangnam-gu, Seoul, Republic of Korea</p>
+													              <p>- 본사 한글: 06241 / 서울특별시 강남구 테헤란로 2길 27, 패스트파이브 빌딩, 11층 1113호 주식회사 어플라이</p>
+													              <p>- 본사 영문: 06241 / APLY Inc. / FastFive Building 11F, 27 Teheran-ro 2-gil, Gangnam-gu, Seoul, Republic of Korea</p>
 													              <hr size=1 color=#efefef>
 													              <p>- 지사 한글: 63309 / 제주특별자치도 제주시 첨단로 330 주식회사 어플라이</p>
 													              <p>- 지사 영문: 63309 / APLY Inc. 330, Cheomdan-ro, Jeju-si, Jeju-do, Republic of Korea</p>
