--- a/recruit/index.html
+++ b/recruit/index.html
@@ -393,7 +393,12 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="copyright">
-                                    <p>© 2021 APLY Inc.</p>
+                                    <p>© 
+<script>
+    var cYear=(new Date()).getFullYear();
+    document.write(cYear);
+</script>
+			 APLY Inc.</p>
                                 </div>
                             </div>
                         </div>
