--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@
 														          <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1">Drone, Everywhere</a></h6>
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
-														          <div class="accordion-item-body">
-														              <p>드론의 비행계획, 자동비행을 쉽게 디자인 할 수 있는 기술을 연구합니다.<br>드론을 전혀 모르는 초보자가 일상에서 드론을 쉽게, 안전하게 활용 할 수 있도록 다양한 방법과 서비스를 제공합니다.</p>
+														          <div class="accordion-item-body">														              														              
+														              <p>드론 서비스 공급자가 새로운 서비스 또는 서비스의 확장을 위해<br>필요로 하는 SW 및 SW 기능을 제공하고 전문가 기술을 연결하여<br>새로운 서비스 역량을 확보하거나
+강화할 수 있도록 돕는 드론 SW 및 기술 연결 플랫폼을 개발합니다.<p>
 														          </div>
 														       </div>
 														  </div>
