--- a/recruit/index.html
+++ b/recruit/index.html
@@ -345,7 +345,7 @@
                           </div>
 
                           <div class="col-md-12">
-                              <p><input type="checkbox" name="agree_1" id="agree_1" value="제공"><label class="lab_check" for="agree_1"><span class="checkbox"></span> 개인정보 처리방침 동의 <span class="required">(필수)</span></label></p>
+                              <p><input type="checkbox" name="agree_1" id="agree_1" value="제공"><label class="lab_check" for="agree_1"><span class="checkbox"></span> <a href="javascript:showPrivacyDialog();">개인정보 처리방침</a> 동의 <span class="required">(필수)</span></label></p>
                               <hr class="m-b-30 m-t-30">
 
                               <div class="text-center">
@@ -498,11 +498,11 @@
    			<div class="modal-dialog modal-lg" role="document">
 						<div class="modal-content">
        					<div class="modal-header">
-               			<h5 class="modal-title">DUNI(두니) 개인정보 처리방침</h5>
+               			<h5 class="modal-title">(주)어플라이 개인정보 처리방침</h5>
                			<button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
            			</div>
            			<div class="modal-body">
-           				<p>주식회사 어플라이(이하 '회사')는 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다. 회사는 개인정보처리방침을 개정하는 경우 DU 서비스(이하 '서비스')의 웹사이트(https://duni.io) 공지사항 또는 개별공지를 통하여 공지할 것입니다. 본 방침은 2020년 5월 15일부터 시행됩니다.</p>
+           				<p>주식회사 어플라이(이하 '회사')는 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다. 회사는 개인정보처리방침을 개정하는 경우 APLY 채용 서비스(이하 '서비스')의 웹사이트(https://aply.biz) 공지사항 또는 개별공지를 통하여 공지할 것입니다. 본 방침은 2021년 2월 15일부터 시행됩니다.</p>
 
            				<h6>제1조 개인정보의 수집, 이용 목적</h6>
            				<p>
