--- a/recruit/index.html
+++ b/recruit/index.html
@@ -365,7 +365,8 @@
                     <div class="row">
                         <div class="col-md-6">
                     	  <h4>서울 본사</h4>
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.485934187991!2d127.02749981530961!3d37.49645567981116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca17955aeedd7%3A0xd3f1b9df8f3fa453!2z7KO87Iud7ZqM7IKsIOyWtO2UjOudvOydtA!5e0!3m2!1sko!2skr!4v1592222776854!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.378852946479!2d127.04370251543789!3d37.54613702980172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5bfb4bdf1e1%3A0x33456ca6178c5e26!2z7Zek7J206re465287Jq065OcIOyEnOyauOyIsuygkCAoSEVZR1JPVU5EIFNFT1VMIEZPUkVTVCk!5e0!3m2!1sko!2skr!4v1614526562322!5m2!1sko!2skr"
+                          width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" loading="lazy"></iframe>
                         </div>
 
                         <div class="col-md-6">
@@ -397,11 +398,10 @@
                                     <div class="textwidget">
                                         <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
-                                            Head Office: 11F, 27, Teheran-ro 2-gil, Gangnam-gu, Seoul, Korea / 06241<hr>
+                                            Head Office: 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea / 04768<hr>
 			        															Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<hr>
                                             E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>
-                                            Phone: +82-2-6956-0801<br>
-                                            Fax: +82-2-2135-5351<br>
+                                            Phone: +82-2-6956-0801
                                         </p>
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
