이메일 서명 디자인 수정, 팩스번호 추가

--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,7 @@
 			                                      Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<hr>
                                             E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                             Phone: +82-2-6956-0801<br>
+                                            Fax: +82-2-6468-2031<br>
                                             <a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
                                         </p>
                                         <ul class="social-icons">
