--- a/recruit/index.html
+++ b/recruit/index.html
@@ -401,7 +401,8 @@
                                             Head Office: 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea / 04768<hr>
 			        															Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<hr>
                                             E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>
-                                            Phone: +82-2-6956-0801
+                                            Phone: +82-2-6956-0801<br>
+                                            Fax: +82-2-6468-2031
                                         </p>
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
