--- a/symbol/index.html
+++ b/symbol/index.html
@@ -142,7 +142,38 @@
 														          <div class="accordion-item-body">
 														              <p>
 
-														              	<div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);"><span style="color: rgb(204, 204, 204); font-size: medium;"><span style="font-family: arial, sans-serif;">&nbsp;​</span>_______________________</span><span style="color: rgb(204, 204, 204); font-size: medium;">____________<br /></span><font face="arial, sans-serif" style="color: rgb(0, 0, 0);"><font color="#999999"><br /><font size="3">&nbsp;&nbsp;</font><strong>Someone Kim</strong>&nbsp; |&nbsp;&nbsp;<strong>Ultra Super Commander</strong></font></font><font face="arial, sans-serif" style="color: rgb(0, 0, 0); font-size: medium;"><br /></font><font face="arial, sans-serif" style="color: rgb(0, 0, 0); font-size: medium;"><font color="#999999"><br /></font></font><em style="color: rgb(0, 0, 0);"><strong><font color="#999999" style="font-family: arial, sans-serif;"><font size="1">&nbsp; &nbsp;</font>APLY Inc.</font></strong></em><font face="arial, sans-serif" style="color: rgb(0, 0, 0); font-size: x-small;"><font color="#999999"><br />&nbsp; &nbsp;</font><font color="#8e7cc3"><strong>T</strong></font><font color="#674ea7">&nbsp;</font><font color="#999999">+82-2-6956-0801&nbsp;</font><font color="#999999">&nbsp;|&nbsp;&nbsp;</font></font><font color="#8e7cc3" style="font-size: x-small; font-family: arial, sans-serif;"><strong>M</strong><font color="#000000">&nbsp;</font></font><font color="#999999"><font style="font-size: x-small; font-family: arial, sans-serif;">+82-</font><font style="font-size: x-small; font-family: arial, sans-serif;">10-1234-5678</font></font></div><div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);"><font size="1"><font face="arial, sans-serif" style="color: rgb(0, 0, 0);">&nbsp; &nbsp;</font></font><font size="1"><font face="arial, sans-serif" style="color: rgb(0, 0, 0);"><font color="#999999" style="color: rgb(153, 153, 153);"><a href="mailto:gunman@aply.biz" target="_blank" style="color: rgb(153, 153, 153);">someone@aply.biz</a>&nbsp; |&nbsp;&nbsp;</font></font></font><font style="color: rgb(0, 0, 0); font-family: arial, sans-serif;"><a href="http://www.aply.biz/" target="_blank"><font color="#999999" size="1">www.aply.biz</font></a></font><font size="1"><font face="arial, sans-serif" style="color: rgb(0, 0, 0);"><br />&nbsp;</font><span style="font-family: arial, sans-serif;"><font color="#999999">&nbsp;<br /></font><strong><font color="#8e7cc3">&nbsp; &nbsp;Office</font></strong><font color="#999999">&nbsp;<br />&nbsp; &nbsp;04768 | 4</font></span></font><font color="#999999"><font face="arial, sans-serif" style="font-size: x-small;">F, 115,&nbsp;</font></font><font color="#999999" face="arial, sans-serif" size="1">Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea</font></div><div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);"><span style="color: rgb(153, 153, 153); font-size: medium; font-family: arial, sans-serif;"><br /></span><em style="color: rgb(0, 0, 0); font-size: medium;"><strong><font color="#cccccc" style="font-family: arial, sans-serif;">&nbsp;</font></strong></em><span style="color: rgb(0, 0, 0); font-size: medium; font-family: arial, sans-serif;"><font color="#8e7cc3"><strong>&nbsp;</strong></font></span><a href="https://aply.biz/" target="_blank" style="color: rgb(0, 0, 0); font-size: medium;"><img src="https://aply.biz/assets/images/logo.png" width="96" height="30" editor_component="image_link" /></a><span style="color: rgb(153, 153, 153); font-size: medium; font-family: arial, sans-serif;"><br /></span><span style="color: rgb(204, 204, 204); font-size: medium;"><span style="font-family: arial, sans-serif;">&nbsp;​</span>_______________________</span><span style="color: rgb(204, 204, 204); font-size: medium;">____________<br /></span></div>
+														              	<div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);">
+														              		<span style="font-family: arial, sans-serif; color: rgb(0, 0, 0); font-size: medium;">
+														              			&nbsp;​_____________________________________________<br/>
+														              		</span>
+														              		<font color="#999999" style="color: rgb(0, 0, 0);"><br/>&nbsp;&nbsp;<strong>Someone Kim</strong>&nbsp; |&nbsp;&nbsp;<strong>Ultra Super Commander</strong></font>
+														              		<br/>
+														              		<br/>&nbsp;
+														              		<em style="color: rgb(0, 0, 0);"><strong><font color="#999999"">APLY Inc.</font></strong></em>
+														              		<font color="#8e7cc3" style="font-size: x-small; font-family: arial, sans-serif;">
+														              		<br/>
+														              			&nbsp; &nbsp;<strong>T</strong>&nbsp;
+														              			<font color="#999999">+82-2-6956-0801&nbsp;</font>
+														              			<font color="#999999">&nbsp;|&nbsp;&nbsp;</font>
+														              			<font color="#8e7cc3"><strong>F</strong>&nbsp;</font>
+														              			<font color="#999999">+82-2-6468-2031&nbsp;</font>
+														              			<font color="#999999">&nbsp;|&nbsp;&nbsp;</font>
+														              			<strong>M</strong>&nbsp;
+														              			<font color="#999999">+82-10-1234-5678</font>
+														              		</font>														              															              	
+														              		<font size="1" face="arial, sans-serif" style="color: rgb(0, 0, 0);"><br/>&nbsp;&nbsp;</font>
+														              		<font size="1" face="arial, sans-serif" color="#999999" style="color: rgb(153, 153, 153);"><a href="mailto:gunman@aply.biz" target="_blank" style="color: rgb(153, 153, 153);">someone@aply.biz</a>&nbsp; |&nbsp;&nbsp;</font>
+														              		<a href="http://www.aply.biz/" target="_blank"><font style="font-family: arial, sans-serif;" color="#999999" size="1">www.aply.biz</font></a>														              		
+															              	<font size="1" style="font-family: arial, sans-serif;"><br />&nbsp;&nbsp;<br />
+															              		<strong><font color="#8e7cc3">&nbsp; &nbsp;Office</font></strong>
+															              		<font color="#999999">&nbsp;<br />&nbsp; &nbsp;04768 | 4F 115,&nbsp;Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea</font>
+															              	</font>
+														              	</div>
+														              	<div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);"><span style="color: rgb(153, 153, 153); font-size: medium; font-family: arial, sans-serif;"><br /></span><em style="color: rgb(0, 0, 0); font-size: medium;"><strong><font color="#cccccc" style="font-family: arial, sans-serif;">&nbsp;</font></strong></em><span style="color: rgb(0, 0, 0); font-size: medium; font-family: arial, sans-serif;"><font color="#8e7cc3"><strong>&nbsp;</strong></font></span><a href="https://aply.biz/" target="_blank" style="color: rgb(0, 0, 0); font-size: medium;"><img src="https://aply.biz/assets/images/logo.png" width="96" height="30" editor_component="image_link" /></a>														              						              		
+														              	<span style="font-family: arial, sans-serif; color: rgb(0, 0, 0); font-size: medium;">
+														              			<br>&nbsp;​_____________________________________________<br/>
+														              	</span>
+														              	</div>
 
 														              </p>
 														          </div>
@@ -328,7 +359,8 @@
                                           Head Office: 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea / 04768<hr>
                                           Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<hr>
                                           E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>
-                                          Phone: +82-2-6956-0801
+                                          Phone: +82-2-6956-0801<br>
+                                          Fax: +82-2-6468-2031
                                         </p>
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
