--- a/symbol/index.html
+++ b/symbol/index.html
@@ -143,10 +143,10 @@
 														              <p>
 
 														              	<div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);">
-														              		<span style="font-family: arial, sans-serif; color: rgb(0, 0, 0); font-size: medium;">
+														              		<span style="font-family: arial, sans-serif; color: rgb(90, 90, 90); font-size: medium;">
 														              			&nbsp;​_____________________________________________<br/>
 														              		</span>
-														              		<font color="#999999" style="color: rgb(0, 0, 0);"><br/>&nbsp;&nbsp;<strong>Someone Kim</strong>&nbsp; |&nbsp;&nbsp;<strong>Ultra Super Commander</strong></font>
+														              		<font color="#999999" style="color: rgb(90, 90, 90);"><br/>&nbsp;&nbsp;<strong>김누구 (Someone Kim)</strong>&nbsp; |&nbsp;&nbsp;<strong>Ultra Super Commander</strong></font>
 														              		<br/>
 														              		<br/>&nbsp;
 														              		<em style="color: rgb(0, 0, 0);"><strong><font color="#999999"">APLY Inc.</font></strong></em>
@@ -170,7 +170,7 @@
 															              	</font>
 														              	</div>
 														              	<div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);"><span style="color: rgb(153, 153, 153); font-size: medium; font-family: arial, sans-serif;"><br /></span><em style="color: rgb(0, 0, 0); font-size: medium;"><strong><font color="#cccccc" style="font-family: arial, sans-serif;">&nbsp;</font></strong></em><span style="color: rgb(0, 0, 0); font-size: medium; font-family: arial, sans-serif;"><font color="#8e7cc3"><strong>&nbsp;</strong></font></span><a href="https://aply.biz/" target="_blank" style="color: rgb(0, 0, 0); font-size: medium;"><img src="https://aply.biz/assets/images/logo.png" width="96" height="30" editor_component="image_link" /></a>														              						              		
-														              	<span style="font-family: arial, sans-serif; color: rgb(0, 0, 0); font-size: medium;">
+														              	<span style="font-family: arial, sans-serif; color: rgb(90, 90, 90); font-size: medium;">
 														              			<br>&nbsp;​_____________________________________________<br/>
 														              	</span>
 														              	</div>
