이메일 서명 다시 수정

--- a/symbol/index.html
+++ b/symbol/index.html
@@ -143,10 +143,10 @@
 														              <p>
 
 														              	<div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);">
-														              		<span style="font-family: arial, sans-serif; color: rgb(90, 90, 90); font-size: medium;">
-														              			&nbsp;​_____________________________________________<br/>
-														              		</span>
-														              		<font color="#999999" style="color: rgb(90, 90, 90);"><br/>&nbsp;&nbsp;<strong>김누구 (Someone Kim)</strong>&nbsp; |&nbsp;&nbsp;<strong>Ultra Super Commander</strong></font>
+														              		<font color="#aaa">
+														              			<br>&nbsp;​________________________________________________________<br/>
+														              		</font>
+														              		<font color="#999999"><br/>&nbsp;&nbsp;<strong>김누구 (Someone Kim)</strong>&nbsp; |&nbsp;&nbsp;<strong>Ultra Super Commander</strong></font>
 														              		<br/>
 														              		<br/>&nbsp;
 														              		<em style="color: rgb(0, 0, 0);"><strong><font color="#999999"">APLY Inc.</font></strong></em>
@@ -161,18 +161,16 @@
 														              			<strong>M</strong>&nbsp;
 														              			<font color="#999999">+82-10-1234-5678</font>
 														              		</font>														              															              	
-														              		<font size="1" face="arial, sans-serif" style="color: rgb(0, 0, 0);"><br/>&nbsp;&nbsp;</font>
-														              		<font size="1" face="arial, sans-serif" color="#999999" style="color: rgb(153, 153, 153);"><a href="mailto:gunman@aply.biz" target="_blank" style="color: rgb(153, 153, 153);">someone@aply.biz</a>&nbsp; |&nbsp;&nbsp;</font>
+														              		<font size="1" color="#999999"><br/>&nbsp;&nbsp;
+														              			<a href="mailto:gunman@aply.biz" target="_blank" style="color: rgb(153, 153, 153);">someone@aply.biz</a>&nbsp; |&nbsp;&nbsp;
+														              		</font>
 														              		<a href="http://www.aply.biz/" target="_blank"><font style="font-family: arial, sans-serif;" color="#999999" size="1">www.aply.biz</font></a>														              		
 															              	<font size="1" style="font-family: arial, sans-serif;"><br />&nbsp;&nbsp;<br />
 															              		<strong><font color="#8e7cc3">&nbsp; &nbsp;Office</font></strong>
 															              		<font color="#999999">&nbsp;<br />&nbsp; &nbsp;04768 | 4F 115,&nbsp;Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea</font>
-															              	</font>
-														              	</div>
-														              	<div style="color: rgb(32, 33, 36); font-family: Arial, Helvetica, sans-serif; font-size: small; background-color: rgb(255, 255, 255);"><span style="color: rgb(153, 153, 153); font-size: medium; font-family: arial, sans-serif;"><br /></span><em style="color: rgb(0, 0, 0); font-size: medium;"><strong><font color="#cccccc" style="font-family: arial, sans-serif;">&nbsp;</font></strong></em><span style="color: rgb(0, 0, 0); font-size: medium; font-family: arial, sans-serif;"><font color="#8e7cc3"><strong>&nbsp;</strong></font></span><a href="https://aply.biz/" target="_blank" style="color: rgb(0, 0, 0); font-size: medium;"><img src="https://aply.biz/assets/images/logo.png" width="96" height="30" editor_component="image_link" /></a>														              						              		
-														              	<span style="font-family: arial, sans-serif; color: rgb(90, 90, 90); font-size: medium;">
-														              			<br>&nbsp;​_____________________________________________<br/>
-														              	</span>
+															              	</font>														              	
+															              	<br><br>&nbsp;&nbsp;<a href="https://aply.biz/" target="_blank"><img src="https://aply.biz/assets/images/logo.png" width="96" height="30"/></a>
+															              	
 														              	</div>
 
 														              </p>
