--- a/recruit/index.html
+++ b/recruit/index.html
@@ -211,7 +211,7 @@
                                   <input class="btn btn-circle btn-brand" id="email_up_send" type="submit" value="연락처 남기기">
                               </div>
                               <input type="hidden" name="form_token" id="form_token">
-                              <p class="text-center m-t-30">연락처를 남겨주시면 채용계획이 생길경우 검토 후  연락드리겠습니다.</p>
+                              <p class="text-center m-t-30">연락처를 남겨주시면 채용계획 발생시 연락 드리겠습니다.</p>
                           </div>
                       </div>
                   </form>
