블로그 주소 변경

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </li>
                             <li><a href="#section-location"><span class="menu-item-span">LOCATION</span></a>
                             </li>
-                            <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">BLOG</span></a>
+                            <li><a href="https://blog.naver.com/duniplatform" target="new"><span class="menu-item-span">BLOG</span></a>
                             </li>
                             <li><a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
                             </li>
@@ -1015,8 +1015,8 @@
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
-                              					    <li><a href="https://blog.aply.biz"><span class="ti-rss"></a></li>
-                              					    <li><a href="https://kr.linkedin.com/company/aplyplatform"><i class="fab fa-linkedin"></i></a></li>
+                              					    <li><a href="https://blog.naver.com/duniplatform target=_new"><span class="ti-rss"></a></li>
+                              					    <li><a href="https://kr.linkedin.com/company/aplyplatform" target=_new><i class="fab fa-linkedin"></i></a></li>
                               					    <li></li>
                                             <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="230" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
                                         </ul>
