--- a/recruit/index.html
+++ b/recruit/index.html
@@ -102,7 +102,7 @@
                             </li>
                             <li><a href="../index.html#section-location"><span class="menu-item-span">LOCATION</span></a>
                             </li>
-                            <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">BLOG</span></a>
+                            <li><a href="https://blog.naver.com/duniplatform" target="new"><span class="menu-item-span">BLOG</span></a>
                             </li>
                             <li><a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
                             </li>
@@ -407,7 +407,7 @@
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
-					    <li><a href="https://blog.aply.biz"><span class="ti-rss"></a></li>
+					    <li><a href="https://blog.naver.com/duniplatform"><span class="ti-rss"></a></li>
 					    <li><a href="https://kr.linkedin.com/company/aplyplatform"><i class="fab fa-linkedin"></i></a></li>
 					    <li></li>
                                             <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="230" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
