--- a/recruit/index.html
+++ b/recruit/index.html
@@ -172,11 +172,13 @@
                               <div class="form-group">
                                 <div class="form-control" style="padding-bottom:.05rem;">
                                   <div class="row">
-                                      <div class="col-lg-2 p-b-10"><label class="lab_check" for="">관심 직군</label></div>
-                                      <div class="col-lg-3 p-b-10"><input type="checkbox" id="min_type_1" name="min_type_1" value="조종"><label class="lab_check" for="min_type_1"><span class="checkbox"></span> SW개발</label></div>
-                                      <div class="col-lg-3 p-b-10"><input type="checkbox" id="min_type_2" name="min_type_2" value="코딩"><label class="lab_check" for="min_type_2"><span class="checkbox"></span> 데이터 분석</label></div>
+                                      <div class="col-lg-12 p-b-10"><label class="lab_check" for="">관심 직군</label></div>
+                                      <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_1" name="min_type_1" value="조종"><label class="lab_check" for="min_type_1"><span class="checkbox"></span> SW개발</label></div>
+                                      <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_2" name="min_type_2" value="코딩"><label class="lab_check" for="min_type_2"><span class="checkbox"></span> 데이터 분석</label></div>
                                       <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_3" name="min_type_3" value="제작"><label class="lab_check" for="min_type_3"><span class="checkbox"></span> HW개발</label></div>
                                       <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_4" name="min_type_4" value="체험"><label class="lab_check" for="min_type_4"><span class="checkbox"></span> 마케팅</label></div>
+                                      <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_5" name="min_type_5" value="체험"><label class="lab_check" for="min_type_5"><span class="checkbox"></span> 디자인</label></div>
+                                      <div class="col-lg-2 p-b-10"><input type="checkbox" id="min_type_6" name="min_type_6" value="체험"><label class="lab_check" for="min_type_6"><span class="checkbox"></span> 기획</label></div>
                                       <input name="min_type" id="min_type" type="hidden">
                                       <input name="form_kind" id="form_kind" type="hidden" value="recruit">
                                     </div>
