서비스 소개 영역에 로고 적용

--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
                             <p class="m-b-30"><img src="assets/images/main/products.png" alt=""></p>
                         </div>
                         <div class="col-lg-6 offset-lg-1">
-                            <h5>APLY가 개발중인 앱과 서비스</h5>
+                            <h5>APLY의 서비스와 플랫폼</h5>
                         </div>
 
                         <div class="col-lg-6 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-shine"></span></div>
+                            		<div class="icon-box-icon"><img src="assets/images/widgets/4.png" border=0></div>
                                 <div class="icon-box-title">
                                     <a href="https://duni.io/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign" target="new">DUNI</a>
                                 </div>
@@ -253,8 +253,8 @@
                         </div>
 
                         <div class="col-lg-6 col-md-6">
-                            <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-shine"></span></div>
+                            <div class="icon-box icon-box-left">                                
+                            		<div class="icon-box-icon"><img src="assets/images/widgets/5.png" border=0></div>
                                 <div class="icon-box-title">
                                     <a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign" target="new">DUNI 파일럿 센터</a>
                                 </div>
@@ -274,7 +274,7 @@
 
                         <div class="col-lg-6 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-vector"></span></div>
+                                <div class="icon-box-icon"><img src="assets/images/widgets/3.png" border=0></div>
                                 <div class="icon-box-title">
                                     <a href="https://dromi.aply.biz/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign">DROMI</a>
                                 </div>
@@ -292,7 +292,7 @@
 
                         <div class="col-lg-6 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-gallery"></span></div>
+                                <div class="icon-box-icon"><img src="assets/images/widgets/2.png" border=0></div>
                                 <div class="icon-box-title">
                                     <a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign" target="new">두런두런</a>
                                 </div>
@@ -311,7 +311,7 @@
 
                     		<div class="col-lg-6 col-md-6">
                             <div class="icon-box icon-box-left">
-                                <div class="icon-box-icon"><span class="ti-heart-broken"></span></div>
+                                <div class="icon-box-icon"><img src="assets/images/widgets/1.png" border=0></div>
                                 <div class="icon-box-title">
                                     <a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign" target="new">두근두근</a>
                                 </div>
