drone everywhere 문구 변경

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론 서비스 공급자가 새로운 서비스 또는 서비스의 확장을 위해<br>필요로 하는 SW 및 SW 기능을 제공하고 전문가 기술을 연결하여<br>새로운 서비스 역량을 확보하거나
+														              <p>드론 서비스 공급자가 필요로 하는 SW 및 기능을 제공하고<br>전문가 기술을 연결하여 새로운 서비스 역량을 확보하거나
 강화할 수 있도록 돕는 드론 SW 및 기술 연결 플랫폼을 개발합니다.<p>
 														          </div>
 														       </div>
