siis, 블랫폼과 업무협약 내용 추가

--- a/index.html
+++ b/index.html
@@ -356,7 +356,20 @@
                         </div>
                     </div>
                     <div class="row">
-		<div class="col-lg-4 col-md-6">
+                    		<div class="col-lg-4 col-md-6">
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2021-03</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>주식회사 SIIS와 업무협약<br>
+                                    주식회사 블랫폼과 업무협약
+                                    <p>
+                                </div>
+                            </div>
+                        </div>
+												<div class="col-lg-4 col-md-6">
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                                 <div class="icon-box-title">
@@ -669,13 +682,27 @@
                     </div>
 
                 		<div class="row">
-				<div class="col-lg-4 col-md-6">
-		                            <div class="icon-box icon-box-left">
-		                                <div class="icon-box-title">
-		                                    <p><a href="https://www.kidp.or.kr" target=new>한국디자인진흥원</a></p>
-		                                </div>
-		                            </div>
-		                </div>
+                			<div class="col-lg-4 col-md-6">
+			                            <div class="icon-box icon-box-left">
+			                                <div class="icon-box-title">
+			                                    <p><a href="https://www.si-imaging.com" target=new>(주)SIIS</a></p>
+			                                </div>
+			                            </div>
+			                </div>
+			                <div class="col-lg-4 col-md-6">
+			                            <div class="icon-box icon-box-left">
+			                                <div class="icon-box-title">
+			                                    <p><a href="https://www.bunyangi.com/" target=new>(주)블랫폼</a></p>
+			                                </div>
+			                            </div>
+			                </div>
+											<div class="col-lg-4 col-md-6">
+			                            <div class="icon-box icon-box-left">
+			                                <div class="icon-box-title">
+			                                    <p><a href="https://www.kidp.or.kr" target=new>한국디자인진흥원</a></p>
+			                                </div>
+			                            </div>
+			                </div>
 				<div class="col-lg-4 col-md-6">
 		                            <div class="icon-box icon-box-left">
 		                                <div class="icon-box-title">
