회사주소 수정

--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                                     <div class="textwidget">
                                         <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
-                                            Head Office: 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea / 04768<hr>
+                                            Head Office: S426/S427, 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea / 04768<hr>
 			                                      Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<hr>
                                             E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                             Phone: +82-2-6956-0801<br>
