--- a/symbol/index.html
+++ b/symbol/index.html
@@ -267,8 +267,9 @@
 														       </div>
 														       <div class="collapse show" id="collapse-4" data-parent="#accordion4">
 														          <div class="accordion-item-body">
-														              <p>- <a href="https://duni.io">두니(DUNI)</a> : 드론 SW 및 기술 연결 플랫폼</p>
-														              <p>드론 서비스 공급자가 새로운 서비스 또는 서비스의 확장을 위해 필요로 하는 SW 및 SW 기능을 제공하고 전문가 기술을 연결하여 새로운 서비스 역량을 확보하거나 강화할 수 있도록 돕는 드론 SW 및 기술 연결 플랫폼을 개발합니다.</p>
+														              <p>- <a href="https://duni.io">두니(DUNI)</a> : 드론 SW 및 데이터 플랫폼</p>
+														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 전문가 기술을 연결하여 드론 서비스 기업이 새로운 서비스 역량을 확보하거나 강화할 수 있도록 돕는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 플랫폼을 개발합니다.
+</p>
 														          </div>
 
 														          <div class="accordion-item-body">
@@ -324,8 +325,8 @@
 													       </div>
 													       <div class="collapse show" id="collapse-6" data-parent="#accordion6">
 													          <div class="accordion-item-body">
-													              <p>- 본사 한글: 04768 / 서울특별시 성동구 왕십리로 115 헤이그라운드 서울숲점 4층 주식회사 어플라이</p>
-													              <p>- 본사 영문: 04768 / APLY Inc. / 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea</p>
+													              <p>- 본사 한글: 04768 / 서울특별시 성동구 왕십리로 115 헤이그라운드 서울숲점 4층 S426,S427 주식회사 어플라이</p>
+													              <p>- 본사 영문: 04768 / APLY Inc. / S426/S427 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea</p>
 													              <hr size=1 color=#efefef>
 													              <p>- 지사 한글: 63309 / 제주특별자치도 제주시 첨단로 330 주식회사 어플라이</p>
 													              <p>- 지사 영문: 63309 / APLY Inc. 330, Cheomdan-ro, Jeju-si, Jeju-do, Republic of Korea</p>
