회사 주소 수정, duni 소개 수정

--- a/symbol/index.html
+++ b/symbol/index.html
@@ -268,7 +268,7 @@
 														       <div class="collapse show" id="collapse-4" data-parent="#accordion4">
 														          <div class="accordion-item-body">
 														              <p>- <a href="https://duni.io">두니(DUNI)</a> : 드론 SW 및 데이터 플랫폼</p>
-														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 전문가 기술을 연결하여 드론 서비스 기업이 새로운 서비스 역량을 확보하거나 강화할 수 있도록 돕는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 플랫폼을 개발합니다.
+														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 전문가 기술을 연결하여 드론 서비스 기업이 역량 외의 서비스에 대응할 수 있고 역량을 확장할 수 있는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼을 개발합니다.
 </p>
 														          </div>
 
