드론 서비스 설명 수정

--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론 서비스 공급자가 필요로 하는 SW 및 기능을 제공하고<br>전문가 기술을 연결하여 새로운 서비스 역량을 확보하거나
-강화할 수 있도록 돕는 드론 SW 및 기술 연결 플랫폼을 개발합니다.<p>
+														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 전문가 기술을 연결하여 드론 서비스 기업들이 역량 외의 서비스에 대응할 수 있고 역량을 확장할 수 있는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼을 개발합니다.<p>
 														          </div>
 														       </div>
 														  </div>
