duni 설명문구 수정

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
         <meta itemprop="name"  content="APLY">
         <meta itemprop="image"  content="https://www.aply.biz/assets/images/site_title.png">
-        <meta itemprop="description" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
-        <meta itemprop="keywords" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
+        <meta itemprop="description" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
+        <meta itemprop="keywords" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
         <meta itemprop="url"    content="https://www.aply.biz/">
 
         <!-- Favicons-->
@@ -163,7 +163,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 전문가 기술을 연결하여 드론 서비스 기업들이 역량 외의 서비스에 대응할 수 있고 역량을 확장할 수 있는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼을 개발합니다.<p>
+														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 전문가 기술을 연결하여 드론 서비스 기업들이 다양한 수요에 대응할 수 있고 역량을 확장할 수 있는 빅데이터, AI, AR 기반의 기술 연결 및 데이터 서비스 플랫폼을 개발합니다.<p>
 														          </div>
 														       </div>
 														  </div>
