두니 블로그 링크추가, 그외 링크 추가

--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
 
 																			<p>
 					                        		<a href="https://duni.io/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+					                        		<a href="https://www.facebook.com/duniplatform/" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
+                                  		<a href="https://www.instagram.com/duni_aply/" target="new"><i class="ti-instagram"></i></a>&nbsp;&nbsp;
+					                        		<a href="https://blog.naver.com/duniplatform?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-rss"></i></a>
                                   	</p>
                                 </div>
                             </div>
@@ -263,9 +266,10 @@
                         						</p>
 
 																		<p>
+																			<a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
 																			<a href="https://www.facebook.com/duniplatform/" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
                                   		<a href="https://www.instagram.com/duni_aply/" target="new"><i class="ti-instagram"></i></a>&nbsp;&nbsp;
-					                        		<a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>
+					                        		<a href="https://blog.naver.com/duniplatform?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-rss"></i></a>
                                   	</p>
                                 </div>
                             </div>
@@ -362,7 +366,7 @@
                                     <h6>2021-03</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>주식회사 SIIS와 업무협약<br>
+                                    <p>주식회사 SIIS와 업무협약,<br>
                                     주식회사 블랫폼과 업무협약
                                     <p>
                                 </div>
@@ -412,8 +416,8 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>주식회사 도로시와 업무협약,<br>
-			AIR ON과 업무협약,<br>
-			주식회사 앱소와 업무협약</p>
+																		AIR ON과 업무협약,<br>
+																		주식회사 앱소와 업무협약</p>
                                 </div>
                             </div>
                         </div>
