--- a/recruit/index.html
+++ b/recruit/index.html
@@ -364,17 +364,12 @@
             <section class="module" id="section-location">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
-                    	  <h4>서울 본사</h4>
+                        <div class="col-md-12">
+                    	  <h4>Location</h4>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.378852946479!2d127.04370251543789!3d37.54613702980172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5bfb4bdf1e1%3A0x33456ca6178c5e26!2z7Zek7J206re465287Jq065OcIOyEnOyauOyIsuygkCAoSEVZR1JPVU5EIFNFT1VMIEZPUkVTVCk!5e0!3m2!1sko!2skr!4v1614526562322!5m2!1sko!2skr"
                           width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" loading="lazy"></iframe>
                         </div>
 
-                        <div class="col-md-6">
-		  <h4>제주 지사</h4>
-	   	  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.273777395248!2d126.56928331478238!3d33.44217308077631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350cfdb398c3e257%3A0x35052b04c7b978ca!2z64Kt6re464qY!5e0!3m2!1sko!2skr!4v1595342743793!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                        </div>
-	        </div>
                     <div class="row">
                         <div class="col-md-12">
                             <div class="space" data-MY="60px"></div>
@@ -399,8 +394,7 @@
                                     <div class="textwidget">
                                         <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
-                                            Head Office: S426/S427, 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea / 04768<hr>
-			        															Branch Office: 330, Cheomdan-ro, Jeju-si, Jeju-do, Korea / 63309<hr>
+                                            Office: S426/S427, 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea / 04768<hr>
                                             E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>
                                             Phone: +82-2-6956-0801<br>
                                             Fax: +82-2-6468-2031
