--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
             </section>
 
 
-						<section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg" data-overlay="0.45" id="section-about">
-								<div class="container" id="ytbg2" data-ytbg-fade-in="true" data-youtube="https://www.youtube.com/watch?v=3pXgq7lEH1U"></div>
+						
+						<section class="module-cover parallax text-center fullscreen" data-background="assets/images/main/comm2.png" data-overlay="0.6" id="section-about">		
                 <div class="container">
                 		<div class="row align-items-center">
                         <div class="col-lg-5">
