--- a/index.html
+++ b/index.html
@@ -268,6 +268,24 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div class="col-lg-6 col-md-6">
+                            <div class="icon-box icon-box-left">                                
+                            		<div class="icon-box-icon"><img src="assets/images/widgets/4.png" border=0></div>
+                                <div class="icon-box-title">
+                                    <a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign" target="new">DUNI 개발자 사이트 </a>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>
+                                    드론 SW 개발자 지원 사이트
+                        						</p>
+
+																		<p>
+																			<a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign" target="new"><i class="ti-link"></i></a>
+                                  	</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
