--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 														       </div>
 														       <div class="collapse show" id="collapse-1" data-parent="#accordion1">
 														          <div class="accordion-item-body">
-														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 수요와 전문가 기술을 연결하여 드론 서비스 기업과 개인의 성장, 역량 강화를 돕는 빅데이터, AI, AR 기반의 드론 SW 플랫폼을 제공합니다.<p>
+														              <p>드론 서비스 기업이 요구하는 SW를 제공하고 수요와 전문가 기술을 연결하여 드론 서비스 기업과 개인의 성장, 역량 강화를 돕는 빅데이터, AI, AR 기반의 드론 SW 플랫폼을 개발합니다.<p>
 														          </div>
 														       </div>
 														  </div>
@@ -224,7 +224,7 @@
                         </div>
                         <div class="col-lg-6 offset-lg-1">
                             <h5>Drone, Everywhere.</h5>
-                            <p class="lead">드론 서비스 기업과 개인의 성장, 역량 강화를 돕는<br>수요 및 기술 연결 플랫폼을 제공합니다.</p>
+                            <p>드론 서비스 기업과 개인의 성장, 역량 강화를 돕는<br>수요 및 기술 연결 플랫폼을 개발합니다.</p>
                         </div>
 
                         <div class="col-lg-6 col-md-6">
