--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         </div>
                         <div class="col-lg-6 offset-lg-1">
                             <h5>Drone, Everywhere.</h5>
-                            <p>드론 서비스 기업과 개인의 성장, 역량 강화를 돕는<br>수요 및 기술 연결 플랫폼을 개발합니다.</p>
+                            <p class="lead">드론 서비스 기업과 개인의 성장, 역량 강화를 돕는<br> 수요 및 기술 연결 플랫폼을 개발합니다.</p>
                         </div>
 
                         <div class="col-lg-6 col-md-6">
