--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
                         </div>
                         <div class="col-lg-6 offset-lg-1">
                             <h5>Drone, Everywhere.</h5>
-                            <p class="lead">드론 기업과 개인의 성장, 역량 강화를 돕는<br> 서비스 수요 및 기술 연결 플랫폼을 개발합니다.</p>
+                            <p class="lead">드론 기업과 개인의 성장, 역량 강화를 돕는<br> 서비스 수요 및 기술 연결 플랫폼 : DUNI (Drone Universe)</p>
                         </div>
 
                         <div class="col-lg-6 col-md-6">
                             <div class="icon-box icon-box-left">
                             		<div class="icon-box-icon"><img src="assets/images/widgets/4.png" border=0></div>
                                 <div class="icon-box-title">
-                                    <a href="https://duni.io/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign" target="new">DUNI</a>
+                                    <a href="https://duni.io/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign" target="new">DUNI 서비스</a>
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
